src/objects/IGOM_Account_Role_Relationship__c.object
<CustomObject>
    <description>Object used to store Account role relationship data specific to the IGOM Service.</description>
    <fields>
        <fullName>Accepts_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that establishes whether the From part of the relationship accepts notifications from the To part of the relationship.</description>
        <label>Accepts Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent side of the relationship</description>
        <label>From</label>
        <referenceTo>IGOM_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Child relationships</relationshipLabel>
        <relationshipName>Child_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which station requested the relationship.</description>
        <label>Requested By</label>
        <referenceTo>IGOM_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Requested Relationships</relationshipLabel>
        <relationshipName>Requested_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the realtionship.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Child side of the relationship</description>
        <label>To</label>
        <referenceTo>IGOM_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Parent Relationships</relationshipLabel>
        <relationshipName>Parent_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group_relationship</fullName>
                    <label>Group relationship</label>
                </value>
                <value>
                    <fullName>Hierarchical_relationship</fullName>
                    <label>Hierarchical relationship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IGOM Account Role Relationship</label>
    <nameField>
        <displayFormat>ARR-{00000000}</displayFormat>
        <label>IGOM Account Role Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IGOM Account Role Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>